# smash

./: .gitignore  Cargo.toml
src/: main.rs
src/controllers/: person.rs
src/database/: mod.rs  person.rs
src/database/objects/: comment.rs  login.rs  mod.rs  person.rs  post.rs
src/models/: comment.rs  generic_error.rs  login.rs  mod.rs  person.rs  post.rs
src/routes/: user.rs
