[package]
name = "smash"
version = "0.1.0"
authors = ["feram"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-web = "3"
mysql = "20.0.1"
serde = "1.0.117"
openssl = "0.10.30"